fixed some bugs and added more news sources
